--- a/LS/Base.lproj/Main.storyboard
+++ b/LS/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="16A201w" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="OCt-5J-1fq">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="16A239j" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="th8-sU-wPv">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -8,10 +8,10 @@
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
-        <!--Children View Controller-->
+        <!--Hediye-->
         <scene sceneID="qt6-j4-WhZ">
             <objects>
-                <viewController id="4Ff-wn-np0" customClass="ChildrenViewController" customModule="LS" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Hediye" id="4Ff-wn-np0" customClass="ChildrenViewController" customModule="LS" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Ewj-qn-XIP"/>
                         <viewControllerLayoutGuide type="bottom" id="ZKQ-Xy-oix"/>
@@ -20,7 +20,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Kou-Nx-K6r">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Kou-Nx-K6r">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <collectionViewLayout key="collectionViewLayout" id="Wnt-96-Kx5" customClass="LSLayout" customModule="LS" customModuleProvider="target"/>
                                 <cells>
@@ -147,7 +147,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iX9-BK-1RT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2626" y="-252"/>
+            <point key="canvasLocation" x="3398" y="-692"/>
         </scene>
         <!--Leyla Kimdir?-->
         <scene sceneID="UJG-rF-J2f">
@@ -162,7 +162,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xaH-vw-W41">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="1200"/>
+                                <rect key="frame" x="0.0" y="44" width="600" height="1107"/>
                                 <subviews>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="fm8-9f-chO">
                                         <rect key="frame" x="20" y="8" width="560" height="983"/>
@@ -215,6 +215,7 @@ Bugün Leyla’nın haberiyle yeniden anladık ki, hayat hepimiz için yalnızca
                             <constraint firstItem="O3D-QB-RYx" firstAttribute="top" secondItem="xaH-vw-W41" secondAttribute="bottom" id="x0q-hu-HXW"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="6Up-6e-ybk"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="600" height="1200"/>
                     <connections>
@@ -223,7 +224,7 @@ Bugün Leyla’nın haberiyle yeniden anladık ki, hayat hepimiz için yalnızca
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Kpi-Nd-300" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1851" y="759"/>
+            <point key="canvasLocation" x="3398" y="483"/>
         </scene>
         <!--Biz Kimiz?-->
         <scene sceneID="9g5-Ho-uSJ">
@@ -238,10 +239,10 @@ Bugün Leyla’nın haberiyle yeniden anladık ki, hayat hepimiz için yalnızca
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UmH-LS-a7x">
-                                <rect key="frame" x="20" y="20" width="560" height="1180"/>
+                                <rect key="frame" x="20" y="64" width="560" height="1087"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F2S-bx-ylz" customClass="LSButton" customModule="LS" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="999" width="560" height="50"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F2S-bx-ylz" customClass="LSButton" customModule="LS" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="1014" width="560" height="50"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="gmg-da-x9u"/>
                                         </constraints>
@@ -309,6 +310,7 @@ Dileğin gerçekleştirilmesi ile bizim görevimiz ve çocuklarımızla iletişi
                             <constraint firstItem="K3P-As-r0A" firstAttribute="top" secondItem="UmH-LS-a7x" secondAttribute="bottom" id="t5B-5P-e4P"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="sTm-jT-AwJ"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="600" height="1200"/>
                     <connections>
@@ -317,7 +319,7 @@ Dileğin gerçekleştirilmesi ile bizim görevimiz ve çocuklarımızla iletişi
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FvP-PZ-Xlf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2591" y="759"/>
+            <point key="canvasLocation" x="3398" y="1851"/>
         </scene>
         <!--Delegate-->
         <scene sceneID="dHb-Ha-jhO">
@@ -331,7 +333,7 @@ Dileğin gerçekleştirilmesi ile bizim görevimiz ve çocuklarımızla iletişi
                         <rect key="frame" x="0.0" y="0.0" width="600" height="1000"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QDn-w9-MTB">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QDn-w9-MTB">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="1000"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Yeni Çocuk Bildirimi" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gsT-0c-5Cy">
@@ -622,6 +624,7 @@ Cg
                             </mask>
                         </variation>
                     </view>
+                    <navigationItem key="navigationItem" id="iqv-1K-LIM"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="600" height="1000"/>
                     <connections>
@@ -635,25 +638,7 @@ Cg
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YC2-zf-C94" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3299" y="659"/>
-        </scene>
-        <!--Görseller-->
-        <scene sceneID="GT5-hN-OVs">
-            <objects>
-                <viewController storyboardIdentifier="MediaViewController" title="Görseller" id="YGT-dg-EXJ" customClass="MediaViewController" customModule="LS" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="1px-VR-rLM"/>
-                        <viewControllerLayoutGuide type="bottom" id="VwV-Bx-N64"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="jWL-CO-eYz">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="13l-RP-x8G" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="3966" y="459"/>
+            <point key="canvasLocation" x="3398" y="3099"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="90R-Dz-mXk">
@@ -848,7 +833,7 @@ Cg
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="haO-43-zSX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3407" y="-252"/>
+            <point key="canvasLocation" x="4107" y="-692"/>
         </scene>
         <!--Delegate-->
         <scene sceneID="fZV-BE-QOR">
@@ -1155,12 +1140,13 @@ Cg
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hdJ-Fv-d5D" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4048" y="-252"/>
+            <point key="canvasLocation" x="4836" y="-684"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Miniklerimiz-->
         <scene sceneID="wZH-J2-TYc">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="OCt-5J-1fq" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Miniklerimiz" image="menuChildrenIcon" id="CNJ-b4-ver"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="MIa-lh-o4Y">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -1173,12 +1159,93 @@ Cg
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Rlr-Tf-H3C" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1846" y="-252"/>
+            <point key="canvasLocation" x="2658" y="-692"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="QiK-Xf-7mv">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="th8-sU-wPv" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="7nr-qr-iXK">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="OCt-5J-1fq" kind="relationship" relationship="viewControllers" id="MMD-Nd-YqR"/>
+                        <segue destination="kVx-bC-PDW" kind="relationship" relationship="viewControllers" id="biW-xt-g1z"/>
+                        <segue destination="XUM-dP-Xt4" kind="relationship" relationship="viewControllers" id="zH4-Ml-Uxo"/>
+                        <segue destination="TvS-lN-jgc" kind="relationship" relationship="viewControllers" id="lgV-BA-R38"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="n36-yc-rxs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1710" y="640"/>
+        </scene>
+        <!--Leyla Kimdir?-->
+        <scene sceneID="XCJ-Ad-P7R">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="kVx-bC-PDW" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Leyla Kimdir?" image="menuLeylaIcon" id="Pvj-vh-Oix"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="niW-9f-1yH">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="78N-lc-EPh" kind="relationship" relationship="rootViewController" id="EbC-cR-i1b"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rpo-5l-Pxf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2658" y="183"/>
+        </scene>
+        <!--Biz Kimiz?-->
+        <scene sceneID="5Zp-X4-Of2">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="XUM-dP-Xt4" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Biz Kimiz?" image="menuUsIcon" id="h0j-y1-BSU"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="V2e-XV-JUD">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="stY-ut-eE7" kind="relationship" relationship="rootViewController" id="EHw-CW-BDW"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qL8-Sf-1tg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2658" y="1551"/>
+        </scene>
+        <!--Ayarlar-->
+        <scene sceneID="bgt-kb-Szr">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="TvS-lN-jgc" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Ayarlar" image="menuSettingIcon" id="UBL-3v-tVX"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="dYd-JS-Og0">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="DDY-uc-ONg" kind="relationship" relationship="rootViewController" id="LAq-Zd-mY3"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fZL-TA-MMb" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2658" y="2899"/>
         </scene>
     </scenes>
     <resources>
         <image name="enescakir_logo" width="500" height="255"/>
         <image name="folx_logo" width="500" height="255"/>
+        <image name="menuChildrenIcon" width="32" height="32"/>
         <image name="menuIcon" width="32" height="32"/>
+        <image name="menuLeylaIcon" width="32" height="32"/>
+        <image name="menuSettingIcon" width="32" height="32"/>
+        <image name="menuUsIcon" width="32" height="32"/>
     </resources>
 </document>
